--- a/.github/workflows/releaseJgiven.yaml
+++ b/.github/workflows/releaseJgiven.yaml
@@ -21,8 +21,8 @@ jobs:
           cd JGiven
           ./scripts/release.sh ${{ github.event.inputs.version }}
 
-          git config --global user.name $ACTOR
-          git config --global user.email "nils-oliver.linden@tngtech.com"
+          git config user.name "you@example.com"
+          git config user.email "Your Name"
         env:
           ACTOR: ${{ github.actor }}
           ORG_GRADLE_PROJECT_signingKey: ${{ secrets.GPG_SIGNING_KEY }}
