--- a/.github/workflows/releaseJgiven.yaml
+++ b/.github/workflows/releaseJgiven.yaml
@@ -22,6 +22,7 @@ jobs:
           git config user.name $ACTOR
           git config user.email "nils-oliver.linden@tngtech.com"
 
+          env
           ./scripts/release.sh ${{ github.event.inputs.version }}
         env:
           ACTOR: ${{ github.actor }}
