--- a/.github/workflows/releaseJgiven.yaml
+++ b/.github/workflows/releaseJgiven.yaml
@@ -12,22 +12,22 @@ jobs:
     steps:
       - name: Checkout
         run: |
-          git clone https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/NilsOliverLinden/JGiven.git
-        env:
-          GITHUB_ACTOR: ${{ github.actor }}
-          GITHUB_TOKEN: ${{ github.token }}
-      - name: Build & Release
-        run: |
+          echo Cloning
+          git clone https://github.com/NilsOliverLinden/JGiven.git
           cd JGiven
-          git config user.name $ACTOR
-          git config user.email "nils-oliver.linden@tngtech.com"
 
-          ./scripts/release.sh ${{ github.event.inputs.version }}
+          echo Commiting
+          sed -i -e s/version=.*/version=${{ github.event.inputs.version }} gradle.properties
+          git add gradle.properties
+          git commit -m "Update version to ${{ github.event.inputs.version }}"
+
+      - name: Pushes to another repository
+        uses: cpina/github-action-push-to-another-repository@master
         env:
-          ACTOR: ${{ github.actor }}
-          ORG_GRADLE_PROJECT_signingKey: ${{ secrets.GPG_SIGNING_KEY }}
-          ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.GPG_SIGNING_PASSWORD}}
-          SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
-          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
-          GRADLE_PLUGIN_RELEASE_KEY: ${{ secrets.GRADLE_RELEASE_KEY }}
-          GRADLE_PLUGIN_RELEASE_PASSWORD: ${{ secrets.GRADLE_RELEASE_PASSWORD }}
+          API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
+        with:
+          source-directory: './JGiven'
+          destination-github-username: 'NilsOliverLinden'
+          destination-repository-name: 'JGiven.git'
+          user-email: 'action@github.com'
+
