--- a/.github/workflows/releaseJgiven.yaml
+++ b/.github/workflows/releaseJgiven.yaml
@@ -1,10 +1,6 @@
 name: Release-JGiven
 on:
   workflow_dispatch:
-    inputs:
-      version:
-        description: 'You have to provide a version (e.g. 0.14.0)'
-        required: true
 
 jobs:
   build:
@@ -16,10 +12,10 @@ jobs:
           git clone https://github.com/NilsOliverLinden/JGiven.git
           cd JGiven
 
-          echo Commiting version ${{ github.event.inputs.version }}
-          sed -i -e s/version=.*/version=${{ github.event.inputs.version }} --debug gradle.properties
-          git add gradle.properties
-          git commit -m "Update version to ${{ github.event.inputs.version }}"
+          echo Commiting
+          touch test.txt
+          git add test.txt
+          git commit -m "Add file from github action"
 
       - name: Pushes to another repository
         uses: cpina/github-action-push-to-another-repository@master
